Fixing navbar jumping

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,6 +14,7 @@
             flex: 1;
             text-align: center;
             .nav-link{
+                display: inline-block;
                 color:$mainGrey;
                 text-transform: capitalize;
                 text-decoration: none;
